--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -74,12 +74,7 @@
 .page-list .level-container .level .records {
     table-layout: fixed;
 }
-.page-list .level-container .level .records tr td:not(:last-child) {
-    padding-right: 1rem;
-}
-.page-list .level-container .level .records .user {
-    width: 100%;
-}
+.page-list .level-container .level .records tr td:not(:last-child)
     text-align: end;
 }
 .page-list .meta-container .og a:hover,
