--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -74,6 +74,18 @@
     table-layout: fixed;
 }
 .page-list .level-container .level .records tr td:not(:last-child)
+    padding-right: 1rem;
+}
+.page-list .level-container .level .records .percent,
+.page-list .level-container .level .records .user,
+.page-list .level-container .level .records .hz {
+    padding-block: 1rem;
+}
+.page-list .level-container .level .records .user {
+    width: 100%;
+}
+.page-list .level-container .level .records .percent,
+.page-list .level-container .level .records .hz {
     text-align: end;
 }
 .page-list .meta-container .og a:hover,
